--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -7,6 +7,12 @@ es-CL:
         restrict_dependent_destroy:
           has_one: No se puede eliminar el registro porque existe un %{record} dependiente
           has_many: No se puede eliminar el registro porque existen %{record} dependientes
+      models:
+        user:
+          attributes:
+            email:
+              blank: " "
+
   date:
     abbr_day_names:
     - dom
